# aegis

./: README.md  debug.py  main.py  pyproject.toml  pytest.ini  requirements.txt  teste1.py  teste2.py  teste3.py  teste4.py
.devcontainer/: devcontainer.json
frontend/: interface.py
src/api/: app.py  mappers.py  schemas.py
src/api/middlewares/: error_handler.py
src/api/routes/: analysis.py  health.py
src/config/: settings.py
src/core/: dependencies.py
src/core/entities/: analysis_request.py  analysis_result.py
src/core/interfaces/: analysis_repository.py  llm_gateway.py
src/core/use_cases/: analyze_architecture.py  get_analysis.py  list_analyses.py
src/infrastructure/graph/: aegis_graph.py  state.py
src/infrastructure/graph/nodes/: aggregator_node.py  analyzer_nodes.py  input_node.py  routing_node.py  summary_node.py
src/infrastructure/llm/: gemini_client.py  langgraph_gateway.py
src/infrastructure/llm/prompts/: __init__.py  ai_system.py  architect.py  base.py  data_pipeline.py  performance.py  security.py  solid_validator.py
src/infrastructure/repositories/: in_memory_repository.py
tests/: conftest.py
tests/unit/: conftest.py  test_api.py  test_entities.py  test_repository.py  test_use_cases.py
