[project]
name = "aegis"
version = "0.1.0"
description = "Shadow Architect - AI-powered architecture advisor"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",       # Para testar FastAPI
    "ruff>=0.4.0",         # Linter + formatter
    "mypy>=1.10.0",        # Type checking
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true